<resources>
    <string name="app_name">ModMob</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_conf_host_txt">Host</string>
    <string name="frag_conf_port_txt">Port</string>
    <string name="frag_conf_offset_txt">Offset</string>
    <string name="register">Register</string>
    <string name="value">Value</string>
    <string name="read_input_register_code_04">Read Input Register - Code 04</string>
    <string name="holding_register_code_03">ReadWrite Holding Register - Code 03</string>
    <string name="frag_conf_slave_id_txt">Slave ID</string>
    <string name="salvar">SAVE</string>
    <string name="slave">1</string>
    <string name="port">502</string>
    <string name="ip_padrao">192.168.25.90</string>
    <string name="_0">0</string>
    <string name="frag_timeout_txt">Timeout(seg)</string>
    <string name="timeout">1000</string>
</resources>
